force-app/main/default/objects/CARE_INCOME_SOURCE_DOC__c/CARE_INCOME_SOURCE_DOC__c.object-meta.xml
<CustomObject>
    <description>Junction object for PEV income source, form and document relationship</description>
    <label>CARE INCOME SOURCE DOC</label>
    <nameField>
        <displayFormat>CSFD{000000000}</displayFormat>
        <label>NAME  (SEQ)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE INCOME SOURCE DOC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>