force-app/main/default/objects/CARE_INCOME_SOURCE_DOC__c/fields/EXTERNAL_ID__c.field-meta.xml
<CustomField>
    <fullName>EXTERNAL_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>EXTERNAL ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>