force-app/main/default/objects/CARE_INCOME_SOURCE_DOC__c/fields/FORM_TYPE_NO__c.field-meta.xml
<CustomField>
    <fullName>FORM_TYPE_NO__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>FORM TYPE NO</label>
    <referenceTo>CARE_Income_Entry_Form__c</referenceTo>
    <relationshipLabel>CARE INCOME SOURCE DOC</relationshipLabel>
    <relationshipName>CARE_INCOME_SOURCE_DOC</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>