force-app/main/default/objects/CARE_INCOME_SOURCE_DOC__c/fields/HAS_PAY_PERIOD__c.field-meta.xml
<CustomField>
    <fullName>HAS_PAY_PERIOD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HAS PAY PERIOD</label>
    <type>Checkbox</type>
</CustomField>