force-app/main/default/objects/CARE_INCOME_SOURCE_DOC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DISCOUNT_LENGTH_IN_DAYS__c</columns>
    <columns>SOURCE_NO__c</columns>
    <columns>DOC_TYPE_NO__c</columns>
    <columns>FORM_TYPE_NO__c</columns>
    <columns>HAS_PAY_PERIOD__c</columns>
    <columns>EXTERNAL_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>